FIX #2933 Make admin stream title input more visible (#2974)
* Update main-layout.css

--- a/web/public/styles/admin/main-layout.css
+++ b/web/public/styles/admin/main-layout.css
@@ -120,6 +120,12 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  padding-top: 1em;
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+}
+
+.global-stream-title-container ::placeholder{
+  color : #696767;
 }
 
 .global-stream-title-container .textfield-with-submit-container {
@@ -131,6 +137,8 @@
 
 .global-stream-title-container .textfield-with-submit-container .input-side {
   width: 400px;
+  border: 1px solid rgba(120,113,255,0.5);
+  border-radius: 0.75rem;
 }
 
 @media (max-width: 800px) {
